--- a/integration-unity/Assets/WebGLTemplates/CustomTemplate/index.html
+++ b/integration-unity/Assets/WebGLTemplates/CustomTemplate/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" style="width: 100%; height: 100%; overflow-y:hidden;">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -43,13 +43,14 @@
         productVersion: "{{{ PRODUCT_VERSION }}}",
     };
 
+    container.className = "unity-mobile";
     if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         config.devicePixelRatio = window.devicePixelRatio;
-        container.className = "unity-mobile";
-    }else{
-        canvas.style.width = "{{{ WIDTH }}}px";
-        canvas.style.height = "{{{ HEIGHT }}}px";
     }
+    // else{
+    //     canvas.style.width = "{{{ WIDTH }}}px";
+    //     canvas.style.height = "{{{ HEIGHT }}}px";
+    // }
 
     #if BACKGROUND_FILENAME
     canvas.style.background = "url('" + buildUrl + "/{{{ BACKGROUND_FILENAME.replace(/'/g, '%27') }}}') center / cover";
