--- a/integration-unity/Assets/WebGLTemplates/CustomTemplate/index.html
+++ b/integration-unity/Assets/WebGLTemplates/CustomTemplate/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="{{{ SPLASH_SCREEN_STYLE.toLowerCase() }}}" style="margin:0; width:100%; height:100%;">
     <div id="unity-container" class="unity-desktop">
-    <canvas id="unity-canvas" width={{{ WIDTH }}} height={{{ HEIGHT }}} style="width: 100%; height: 100%"></canvas>
+    <canvas id="unity-canvas" style="width: 100%; height: 100%"></canvas>
     <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
